# uplog

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  manifest.yaml
cmd/uplog/: BUILD.bazel  main.go
pkg/uplog/: BUILD.bazel  bytebuffer.go
test/: docker.log~
