load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/uplog/cmd/uplog",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/uplog:go_default_library",
        "@com_github_coreos_go_systemd//sdjournal:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_json_iterator_go//:go_default_library",
        "@com_google_cloud_go//compute/metadata:go_default_library",
        "@com_google_cloud_go//logging/apiv2:go_default_library",
        "@go_googleapis//google/api:monitoredres_go_proto",
        "@go_googleapis//google/logging/type:ltype_go_proto",
        "@go_googleapis//google/logging/v2:logging_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
    ],
)

go_binary(
    name = "uplog",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
